Added waybar + hyprpaper

--- a/.config/hypr/hyprland.conf
+++ b/.config/hypr/hyprland.conf
@@ -18,8 +18,8 @@ $fileManager = dolphin
 
 exec-once = systemctl --user start hyprpolkitagent
 exec-once = dunst
-exec-once = wl-paste --type text --watch cliphist store
-exec-once = wl-paste --type image --watch cliphist store
+exec-once = hyprpaper
+exec-once = waybar
 
 # --- General ---
 general {
