--- a/experimental/kitty/kitty.conf
+++ b/experimental/kitty/kitty.conf
@@ -1,12 +1,8 @@
-# ============================================================================
-# KITTY TERMINAL CONFIGURATION - CATPPUCCIN THEME
-# ============================================================================
+# ┌──────────────────────────────────────────────────────────────────────────────┐
+# │ FONTS                                                                        │
+# └──────────────────────────────────────────────────────────────────────────────┘
 
-# ============================================================================
-# FONTS
-# ============================================================================
-
-font_family              JetBrains Mono
+font_family              JetBrainsMono Nerd Font
 bold_font                auto
 italic_font              auto
 bold_italic_font         auto
@@ -16,11 +12,9 @@ adjust_line_height       110%
 adjust_column_width      100%
 disable_ligatures        never
 
-symbol_map               U+23FB-U+23FE,U+2665,U+26A1,U+2B58,U+E0A0-U+E0A2,U+E0B0-U+E0B3,U+E200-U+E2A9,U+E300-U+E3E3,U+E5FA-U+E62B,U+E700-U+E7C5,U+F000-U+F2E0,U+F300-U+F31C,U+F400-U+F4A9,U+F500-U+F8FF,U+F0001-U+F1AF0  Symbols Nerd Font
-
-# ============================================================================
-# CURSOR & SELECTION
-# ============================================================================
+# ┌──────────────────────────────────────────────────────────────────────────────┐
+# │ CURSOR & SELECTION                                                           │
+# └──────────────────────────────────────────────────────────────────────────────┘
 
 cursor_shape                    block
 cursor_blink_interval           0
@@ -34,17 +28,17 @@ copy_on_select                  yes
 strip_trailing_spaces           smart
 select_by_word_characters       :@-./_~?&=%+#
 
-# ============================================================================
-# SCROLLBACK
-# ============================================================================
+# ┌──────────────────────────────────────────────────────────────────────────────┐
+# │ SCROLLBACK                                                                   │
+# └──────────────────────────────────────────────────────────────────────────────┘
 
 scrollback_lines                10000
 scrollback_pager_history_size   1000
 wheel_scroll_multiplier         5.0
 
-# ============================================================================
-# WINDOW
-# ============================================================================
+# ┌──────────────────────────────────────────────────────────────────────────────┐
+# │ WINDOW                                                                       │
+# └──────────────────────────────────────────────────────────────────────────────┘
 
 remember_window_size            yes
 initial_window_width            120c
@@ -55,9 +49,9 @@ window_margin_width             0
 single_window_padding_width     10
 enabled_layouts                 splits,stack,tall
 
-# ============================================================================
-# TAB BAR
-# ============================================================================
+# ┌──────────────────────────────────────────────────────────────────────────────┐
+# │ TAB BAR                                                                      │
+# └──────────────────────────────────────────────────────────────────────────────┘
 
 tab_bar_edge                    top
 tab_bar_style                   powerline
@@ -72,9 +66,9 @@ inactive_tab_foreground         #cdd6f4
 inactive_tab_background         #313244
 tab_bar_background              #1e1e2e
 
-# ============================================================================
-# COLORS - CATPPUCCIN MOCHA
-# ============================================================================
+# ┌──────────────────────────────────────────────────────────────────────────────┐
+# │ COLORS - CATPPUCCIN MOCHA                                                    │
+# └──────────────────────────────────────────────────────────────────────────────┘
 
 foreground                      #cdd6f4
 background                      #1e1e2e
@@ -114,9 +108,9 @@ color14                         #94e2d5
 color7                          #bac2de
 color15                         #a6adc8
 
-# ============================================================================
-# TRANSPARENCY
-# ============================================================================
+# ┌──────────────────────────────────────────────────────────────────────────────┐
+# │ TRANSPARENCY                                                                 │
+# └──────────────────────────────────────────────────────────────────────────────┘
 
 background_opacity              0.92
 background_blur                 24
@@ -124,9 +118,9 @@ dynamic_background_opacity      yes
 dim_opacity                     0.75
 inactive_text_alpha             0.85
 
-# ============================================================================
-# BEHAVIOR
-# ============================================================================
+# ┌──────────────────────────────────────────────────────────────────────────────┐
+# │ BEHAVIOR                                                                     │
+# └──────────────────────────────────────────────────────────────────────────────┘
 
 enable_audio_bell               no
 shell_integration               no-cursor
@@ -136,44 +130,44 @@ allow_hyperlinks                yes
 term                            xterm-256color
 clipboard_control               write-clipboard write-primary
 
-# ============================================================================
-# KEYBINDINGS
-# ============================================================================
+# ┌──────────────────────────────────────────────────────────────────────────────┐
+# │ KEYBINDINGS                                                                  │
+# └──────────────────────────────────────────────────────────────────────────────┘
 
-# Clipboard
+# ── Clipboard ───────────────────────────────────────────────────────────────────
 map ctrl+shift+c                copy_to_clipboard
 map ctrl+shift+v                paste_from_clipboard
 
-# Scrolling
+# ── Scrolling ───────────────────────────────────────────────────────────────────
 map ctrl+shift+up               scroll_line_up
 map ctrl+shift+down             scroll_line_down
 map ctrl+shift+page_up          scroll_page_up
 map ctrl+shift+page_down        scroll_page_down
 map ctrl+shift+g                show_scrollback
 
-# Windows
+# ── Windows ─────────────────────────────────────────────────────────────────────
 map ctrl+shift+enter            new_window
 map ctrl+shift+n                new_os_window
 map ctrl+shift+w                close_window
 map ctrl+shift+]                next_window
 map ctrl+shift+[                previous_window
 
-# Tabs
+# ── Tabs ────────────────────────────────────────────────────────────────────────
 map ctrl+shift+t                new_tab
 map ctrl+shift+q                close_tab
 map ctrl+shift+right            next_tab
 map ctrl+shift+left             previous_tab
 map ctrl+shift+r                rename_tab
 
-# Layouts
+# ── Layouts ─────────────────────────────────────────────────────────────────────
 map ctrl+shift+l                next_layout
 
-# Font
+# ── Font ────────────────────────────────────────────────────────────────────────
 map ctrl+shift+equal            change_font_size all +1.0
 map ctrl+shift+minus            change_font_size all -1.0
 map ctrl+shift+0                change_font_size all 0
 
-# Misc
+# ── Misc ────────────────────────────────────────────────────────────────────────
 map ctrl+shift+f5               load_config_file
 map ctrl+shift+f11              toggle_fullscreen
 map ctrl+shift+f6               toggle_background_opacity
