--- a/experimental/waybar/config.jsonc
+++ b/experimental/waybar/config.jsonc
@@ -1,105 +1,108 @@
 {
   "layer": "bottom",
-  "position": "top",
-  "height": 47,
-  "spacing": 3,
+  "position": "left",
+  "width": 38,
+  "spacing": 4,
   "exclusive": true,
   "gtk-layer-shell": true,
   "passthrough": false,
   "fixed-center": true,
-  "modules-left": ["custom/cachyos", "hyprland/workspaces", "hyprland/window"],
-  "modules-center": ["custom/separator", "mpris", "custom/separator"],
+  "modules-left": [
+    "custom/cachyos",
+    "hyprland/workspaces"
+  ],
+  "modules-center": [
+    "mpris"
+  ],
   "modules-right": [
     "cpu",
     "memory",
     "network",
     "pulseaudio",
     "clock",
-    "clock#simpleclock",
     "tray",
     "custom/separator",
     "custom/logout",
     "custom/shutdown"
   ],
 
-"custom/cachyos": {
-  "format": "⚡",
-  "tooltip-format": "CachyOS",
-  "on-click": "kitty btop"
-},
+  "custom/cachyos": {
+    "format": "⚡",
+    "tooltip-format": "CachyOS\nClick: btop",
+    "on-click": "wofi --show drun --matching=snappy -i"
+  },
 
   "hyprland/workspaces": {
     "on-click": "activate",
-  "tooltip": true,
+    "tooltip": true,
     "format": "{name}",
     "all-outputs": true,
     "disable-scroll": false,
-    "active-only": false
-  },
-
-  "hyprland/window": {
-    "format": "{title}",
-    "max-length": 60,
-    "separate-outputs": true
+    "active-only": false,
+    "persistent-workspaces": {
+      "1": [],
+      "2": [],
+      "3": [],
+      "4": [],
+      "5": []
+    }
   },
 
   "mpris": {
-    "format": "{artist} - {title}",
-    "max-length": 50,
+    "format": "♪",
+    "format-paused": "♪",
     "tooltip": true,
+    "tooltip-format": "{artist} - {title}\n{album}",
     "interval": 1
   },
 
   "cpu": {
-    "format": "CPU: {usage}%",
+    "format": "CPU\n{usage}%",
     "tooltip": true,
+    "tooltip-format": "CPU: {usage}%\nFreq: {frequency} GHz",
     "interval": 3
   },
 
   "memory": {
-    "format": "MEM: {used:0.1f}G",
+    "format": "MEM\n{used:0.1f}G",
     "tooltip": true,
     "tooltip-format": "Memory: {used:0.1f}G / {total:0.1f}G",
     "interval": 5
   },
 
   "network": {
-    "format-wifi": "NET: {essid}",
-    "format-ethernet": "NET: {ifname}",
-    "format-disconnected": "NET: disconnected",
+    "format-wifi": "W",
+    "format-ethernet": "E",
+    "format-disconnected": "X",
     "tooltip": true,
+    "tooltip-format-wifi": "WiFi: {essid}\nSignal: {signalStrength}%\nIP: {ipaddr}",
+    "tooltip-format-ethernet": "Ethernet: {ifname}\nIP: {ipaddr}",
     "interval": 3
   },
 
   "pulseaudio": {
-    "format": "VOL: {volume}%",
-    "format-muted": "VOL: muted",
+    "format": "VOL\n{volume}%",
+    "format-muted": "MUT",
     "on-click": "pavucontrol",
     "on-click-right": "pactl set-sink-mute @DEFAULT_SINK@ toggle",
     "tooltip": true
   },
 
-  "clock#simpleclock": {
-    "format": "{:%H:%M}",
-    "tooltip": false,
-    "interval": 60
-  },
-
   "clock": {
-    "format": "{:%a %d %b}",
+    "format": "{:%H\n%M}",
     "tooltip": true,
-    "tooltip-format": "{:%Y-%m-%d %H:%M:%S}",
+    "tooltip-format": "{:%A, %d %B %Y}",
     "interval": 60
   },
 
   "tray": {
     "show-passive-items": true,
-    "spacing": 8,
+    "spacing": 4,
     "icon-size": 16
   },
 
   "custom/separator": {
-    "format": " | ",
+    "format": "───",
     "tooltip": false
   },
 
