--- a/experimental/hypr/hyprland.conf
+++ b/experimental/hypr/hyprland.conf
@@ -1299,6 +1299,7 @@ bind = $mainMod SHIFT, T, exec, ~/.config/hypr/scripts/kitty-dropdown.sh || kitt
 bind = $mainMod SHIFT, D, exec, discord || vesktop
 bind = $mainMod SHIFT, M, exec, spotify
 bind = $mainMod SHIFT, C, exec, code || codium
+bind = $mainMod SHIFT, H, exec, $terminal -e helix
 
 bind = , Print, exec, mkdir -p ~/Pictures/Screenshots && grim ~/Pictures/Screenshots/$(date +%Y%m%d_%H%M%S).png && notify-send "Screenshot" "Saved to ~/Pictures/Screenshots"
 bind = $mainMod, Print, exec, mkdir -p ~/Pictures/Screenshots && grim -g "$(slurp)" ~/Pictures/Screenshots/$(date +%Y%m%d_%H%M%S).png && notify-send "Screenshot" "Area saved to ~/Pictures/Screenshots"
