Add mouse bindings for workspace navigation
Added mouse bindings to scroll through workspaces.

--- a/experimental/hypr/hyprland.conf
+++ b/experimental/hypr/hyprland.conf
@@ -1293,6 +1293,10 @@ bindle = , XF86AudioLowerVolume, exec, wpctl set-volume @DEFAULT_AUDIO_SINK@ 3%-
 bindm = $mainMod, mouse:272, movewindow
 bindm = $mainMod, mouse:273, resizewindow
 
+# Scroll through workspaces
+bind = $mainMod, mouse_up, workspace, e-1
+bind = $mainMod, mouse_down, workspace, e+1
+
 bind = $mainMod SHIFT, E, exit
 bind = $mainMod SHIFT, T, exec, ~/.config/hypr/scripts/kitty-dropdown.sh || kitty --class kitty-dropdown
 
