updated Waybar tray styling

--- a/experimental/hypr/hyprland.conf
+++ b/experimental/hypr/hyprland.conf
@@ -134,8 +134,8 @@ decoration {
     blur {
         enabled = false
     }
-    dim_inactive = false
-    dim_strength = 0.0
+    dim_inactive = true
+    dim_strength = 0.5
 }
 
 
@@ -145,20 +145,20 @@ decoration {
 # ═══════════════════════════════════════════════════════════════════════════════
 
 animations {
-    enabled = no
+    enabled = yes
     bezier = smoothOut, 0.36, 0.0, 0.66, -0.56
     bezier = smoothIn, 0.25, 1.0, 0.5, 1.0
     bezier = overshot, 0.4, 0.0, 0.2, 1.2
     bezier = easeOutQuint, 0.22, 1.0, 0.36, 1.0
     bezier = ease, 0.25, 0.1, 0.25, 1.0
-    animation = windows, 1, 4, easeOutQuint, slide
-    animation = windowsOut, 1, 4, ease, slide
-    animation = windowsMove, 1, 4, ease, slide
+    animation = windows, 1, 4, easeOutQuint, slidevert
+    animation = windowsOut, 1, 4, ease, slidevert
+    animation = windowsMove, 1, 4, ease, slidevert
     animation = fadeIn, 1, 4, ease
     animation = fadeOut, 1, 4, ease
     animation = fade, 1, 4, ease
     animation = border, 1, 8, default
-    animation = workspaces, 1, 4, overshot, slide
+    animation = workspaces, 1, 4, easeOutQuint, slidevert
     animation = specialWorkspace, 1, 4, overshot, slidevert
 }
 
@@ -414,12 +414,10 @@ windowrule {
     name = kitty-dropdown
     match:class = ^(kitty-dropdown)$
     float = true
-    pin = true
-    size = 96% 42%
-    move = 2% 0
     opacity = 0.92
     animation = slidevert
-    rounding = 0
+    rounding = 10
+    workspace = special:dropdown
 }
 
 windowrule {
@@ -2972,7 +2970,7 @@ bind = $mainMod, mouse_up, workspace, e+1
 bind = $mainMod, mouse_down, workspace, e-1
 
 bind = $mainMod SHIFT, E, exit
-bind = $mainMod SHIFT, T, exec, ~/.config/hypr/scripts/kitty-dropdown.sh || kitty --class kitty-dropdown
+bind = $mainMod SHIFT, T, exec, ~/.config/hypr/scripts/kitty-dropdown.sh
 
 bind = , Print, exec, mkdir -p ~/Pictures/Screenshots && grim ~/Pictures/Screenshots/$(date +%Y%m%d_%H%M%S).png && notify-send "Screenshot" "Saved to ~/Pictures/Screenshots"
 bind = $mainMod, Print, exec, mkdir -p ~/Pictures/Screenshots && grim -g "$(slurp)" ~/Pictures/Screenshots/$(date +%Y%m%d_%H%M%S).png && notify-send "Screenshot" "Area saved to ~/Pictures/Screenshots"
