Implement automatic Waybar restart

--- a/experimental/hypr/hyprland.conf
+++ b/experimental/hypr/hyprland.conf
@@ -58,9 +58,11 @@ exec-once = brightnessctl set 40%
 exec-once = gsettings set org.gnome.desktop.interface gtk-theme 'Adwaita-dark'
 exec-once = gsettings set org.gnome.desktop.interface color-scheme 'prefer-dark'
 
-# 5. Start Waybar LAST with a delay
-# The sleep ensures DBus is fully ready before the bar launches
-exec-once = sleep 1 && waybar
+# 5. Start Waybar and tray watcher
+# waybar-start.sh launches Waybar; the tray watcher restarts it once when the
+# first tray app registers, then exits automatically.
+exec-once = bash ~/.config/hypr/scripts/waybar-start.sh
+exec-once = bash ~/.config/hypr/scripts/waybar-tray-watcher.sh
 
 
 
